--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
+    "react-query": "^3.39.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
